samples/_failures_safe/1761612613_d7972d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c0b149a2.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_c0b149a2.c:162:37: error: missing terminating " character
  162 |         case TOKEN_OPERATOR: printf("OPER
      |                                     ^~~~~
./samples/SAFE/__tmp_c0b149a2.c:162:9: error: expected expression at end of input
  162 |         case TOKEN_OPERATOR: printf("OPER
      |         ^~~~
./samples/SAFE/__tmp_c0b149a2.c:162:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c0b149a2.c:162:9: error: expected declaration or statement at end of input
